Some "small" changes